--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.1.0",
     "i18next-http-backend": "^3.0.2",
+    "immer": "^10.1.1",
     "jodit-react": "^5.2.19",
     "js-cookie": "^3.0.5",
     "postcss": "^8.5.4",
@@ -30,7 +31,6 @@
     "react-hook-form": "^7.56.4",
     "react-i18next": "^15.5.2",
     "react-icons": "^5.5.0",
-    "react-immer": "^1.5.3",
     "react-router-dom": "^7.6.1",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
